chore(app-template): use deployment instead of statufulset

--- a/kubernetes/apps/database/emqx/exporter/helmrelease.yaml
+++ b/kubernetes/apps/database/emqx/exporter/helmrelease.yaml
@@ -16,16 +16,17 @@ spec:
     remediation:
       retries: 3
   values:
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-
     controllers:
       emqx-exporter:
         replicas: 1
         strategy: RollingUpdate
+        pod:
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
+            fsGroup: 1000
+            fsGroupChangePolicy: OnRootMismatch
         containers:
           app:
             image:
@@ -34,15 +35,17 @@ spec:
             args:
               - --config.file
               - /etc/emqx-exporter/config.yaml
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
               limits:
                 memory: 256Mi
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities:
+                drop:
+                  - ALL
 
     service:
       app:
@@ -101,7 +104,6 @@ spec:
 
     persistence:
       config:
-        enabled: true
         type: secret
         name: emqx-exporter
         globalMounts:
