--- a/kubernetes/apps/default/homepage/app/helmrelease.yaml
+++ b/kubernetes/apps/default/homepage/app/helmrelease.yaml
@@ -16,16 +16,15 @@ spec:
     remediation:
       retries: 3
   values:
-    defaultPodOptions:
-      enableServiceLinks: true
-      securityContext:
-        runAsUser: 568
-        runAsGroup: 568
-        fsGroup: 568
-        fsGroupChangePolicy: "OnRootMismatch"
-
     controllers:
       homepage:
+        strategy: RollingUpdate
+        pod:
+          securityContext:
+            runAsUser: 568
+            runAsGroup: 568
+            fsGroup: 568
+            fsGroupChangePolicy: "OnRootMismatch"
         containers:
           app:
             image:
@@ -38,42 +37,9 @@ spec:
                   name: homepage
             resources:
               requests:
-                cpu: 100m
+                cpu: 10m
               limits:
                 memory: 1Gi
-
-    service:
-      app:
-        controller: homepage
-        primary: true
-        ports:
-          http:
-            port: 80
-            targetPort: 3000
-
-    route:
-      app:
-        hostnames:
-          - homepage.nasenov.dev
-        parentRefs:
-          - name: internal
-            namespace: kube-system
-            sectionName: https
-        rules:
-          - backendRefs:
-              - name: homepage
-                port: 80
-
-    persistence:
-      config:
-        type: configMap
-        name: homepage-config
-        globalMounts:
-          - path: /app/config
-      logs:
-        type: emptyDir
-        globalMounts:
-          - path: /app/config/logs
 
     configMaps:
       config:
@@ -256,3 +222,35 @@ spec:
             ---
             - logo:
                 icon: homepage.png
+
+    service:
+      app:
+        controller: homepage
+        ports:
+          http:
+            port: 80
+            targetPort: 3000
+
+    route:
+      app:
+        hostnames:
+          - homepage.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: homepage
+                port: 80
+
+    persistence:
+      config:
+        type: configMap
+        name: homepage-config
+        globalMounts:
+          - path: /app/config
+      logs:
+        type: emptyDir
+        globalMounts:
+          - path: /app/config/logs
