--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -18,21 +18,6 @@ spec:
   values:
     controllers:
       jellyseerr:
-        type: statefulset
-
-        statefulset:
-          volumeClaimTemplates:
-            - name: config
-              globalMounts:
-                - path: /app/config
-              accessMode: ReadWriteOnce
-              dataSourceRef:
-                apiGroup: volsync.backube
-                kind: ReplicationDestination
-                name: jellyseerr-dst
-              size: 1Gi
-              storageClass: ceph-block
-
         containers:
           app:
             image:
@@ -56,7 +41,7 @@ spec:
               readiness: *probes
             resources:
               requests:
-                cpu: 100m
+                cpu: 10m
               limits:
                 memory: 512Mi
 
@@ -80,3 +65,16 @@ spec:
           - backendRefs:
               - name: jellyseerr
                 port: 80
+
+    persistence:
+      config:
+        type: persistentVolumeClaim
+        storageClass: ceph-block
+        dataSourceRef:
+          apiGroup: volsync.backube
+          kind: ReplicationDestination
+          name: jellyseerr-dst
+        accessMode: ReadWriteOnce
+        size: 1Gi
+        globalMounts:
+          - path: /app/config
