--- a/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
@@ -26,50 +26,47 @@ spec:
           successfulJobsHistory: 1
           failedJobsHistory: 1
           ttlSecondsAfterFinished: 86400
+        pod:
+          restartPolicy: Never
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
+            fsGroup: 1000
+            fsGroupChangePolicy: OnRootMismatch
         containers:
           app:
             image:
               repository: ghcr.io/recyclarr/recyclarr
               tag: 7.4.1@sha256:759540877f95453eca8a26c1a93593e783a7a824c324fbd57523deffb67f48e1
+            args: ["sync"]
+            env:
+              TZ: Europe/Sofia
             envFrom:
               - secretRef:
                   name: recyclarr
-            env:
-              TZ: Europe/Sofia
-            args: ["sync"]
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
               limits:
                 memory: 128Mi
-        pod:
-          restartPolicy: Never
-
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        fsGroupChangePolicy: OnRootMismatch
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities:
+                drop:
+                  - ALL
 
     persistence:
       config:
-        enabled: true
         type: persistentVolumeClaim
         storageClass: ceph-block
-        accessMode: ReadWriteOnce
-        size: 1Gi
-        globalMounts:
-          - path: /config
         dataSourceRef:
           apiGroup: volsync.backube
           kind: ReplicationDestination
           name: recyclarr-dst
+        accessMode: ReadWriteOnce
+        size: 1Gi
       config-file:
         type: configMap
         name: recyclarr-configmap
