chore(volsync): backup deployment pvcs

--- a/kubernetes/apps/default/autobrr/app/volsync.yaml
+++ b/kubernetes/apps/default/autobrr/app/volsync.yaml
@@ -5,7 +5,7 @@ kind: ReplicationSource
 metadata:
   name: autobrr
 spec:
-  sourcePVC: config-autobrr-0
+  sourcePVC: autobrr-config
   trigger:
     schedule: "0 * * * *"
   restic:
