--- a/kubernetes/apps/default/home-assistant/app/volsync.yaml
+++ b/kubernetes/apps/default/home-assistant/app/volsync.yaml
@@ -5,7 +5,7 @@ kind: ReplicationSource
 metadata:
   name: home-assistant
 spec:
-  sourcePVC: config-home-assistant-0
+  sourcePVC: home-assistant-config
   trigger:
     schedule: "0 * * * *"
   restic:
