--- a/kubernetes/apps/default/sonarr/app/volsync.yaml
+++ b/kubernetes/apps/default/sonarr/app/volsync.yaml
@@ -5,7 +5,7 @@ kind: ReplicationSource
 metadata:
   name: sonarr
 spec:
-  sourcePVC: config-sonarr-0
+  sourcePVC: sonarr-config
   trigger:
     schedule: "0 * * * *"
   restic:
