--- a/kubernetes/apps/default/zigbee2mqtt/app/volsync.yaml
+++ b/kubernetes/apps/default/zigbee2mqtt/app/volsync.yaml
@@ -5,7 +5,7 @@ kind: ReplicationSource
 metadata:
   name: zigbee2mqtt
 spec:
-  sourcePVC: config-zigbee2mqtt-0
+  sourcePVC: zigbee2mqtt-config
   trigger:
     schedule: "0 * * * *"
   restic:
