--- a/kubernetes/apps/default/cross-seed/app/volsync.yaml
+++ b/kubernetes/apps/default/cross-seed/app/volsync.yaml
@@ -38,3 +38,6 @@ spec:
       runAsUser: 1000
       runAsGroup: 1000
       fsGroup: 1000
+    enableFileDeletion: true
+    cleanupCachePVC: true
+    cleanupTempPVC: true
