fix(jellyfin): emptyDir for logs

--- a/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
@@ -80,6 +80,10 @@ spec:
           name: jellyfin-dst
         accessMode: ReadWriteOnce
         size: 50Gi
+      config-log:
+        type: emptyDir
+        globalMounts:
+          - path: /config/log
       transcode:
         enabled: true
         type: emptyDir
