--- a/kubernetes/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/bazarr/app/helmrelease.yaml
@@ -80,14 +80,7 @@ spec:
 
     persistence:
       config:
-        type: persistentVolumeClaim
-        storageClass: ceph-block
-        dataSourceRef:
-          apiGroup: volsync.backube
-          kind: ReplicationDestination
-          name: bazarr-dst
-        accessMode: ReadWriteOnce
-        size: 1Gi
+        existingClaim: bazarr
       config-cache:
         type: emptyDir
         globalMounts:
