--- a/kubernetes/apps/default/bazarr/ks.yaml
+++ b/kubernetes/apps/default/bazarr/ks.yaml
@@ -3,12 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: bazarr
+  name: &app bazarr
 spec:
   targetNamespace: default
   interval: 30m
   retryInterval: 2m
   timeout: 5m
+  components:
+    - ../../../../components/volsync
   dependsOn:
     - name: volsync
       namespace: storage
@@ -22,3 +24,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  postBuild:
+    substitute:
+      APP: *app
