--- a/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
@@ -72,14 +72,7 @@ spec:
 
     persistence:
       config:
-        type: persistentVolumeClaim
-        storageClass: ceph-block
-        dataSourceRef:
-          apiGroup: volsync.backube
-          kind: ReplicationDestination
-          name: jellyfin-dst
-        accessMode: ReadWriteOnce
-        size: 50Gi
+        existingClaim: jellyfin
       config-log:
         type: emptyDir
         globalMounts:
