--- a/kubernetes/apps/default/jellyfin/ks.yaml
+++ b/kubernetes/apps/default/jellyfin/ks.yaml
@@ -3,12 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: jellyfin
+  name: &app jellyfin
 spec:
   targetNamespace: default
   interval: 30m
   retryInterval: 2m
   timeout: 5m
+  components:
+    - ../../../../components/volsync
   dependsOn:
     - name: volsync
       namespace: storage
@@ -24,3 +26,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  postBuild:
+    substitute:
+      APP: *app
+      VOLSYNC_CAPACITY: 50Gi
