--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -68,14 +68,7 @@ spec:
 
     persistence:
       config:
-        type: persistentVolumeClaim
-        storageClass: ceph-block
-        dataSourceRef:
-          apiGroup: volsync.backube
-          kind: ReplicationDestination
-          name: jellyseerr-dst
-        accessMode: ReadWriteOnce
-        size: 1Gi
+        existingClaim: jellyseerr
         globalMounts:
           - path: /app/config
       config-cache:
