--- a/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -80,14 +80,7 @@ spec:
 
     persistence:
       config:
-        type: persistentVolumeClaim
-        storageClass: ceph-block
-        dataSourceRef:
-          apiGroup: volsync.backube
-          kind: ReplicationDestination
-          name: sonarr-dst
-        accessMode: ReadWriteOnce
-        size: 1Gi
+        existingClaim: sonarr
       media:
         enabled: true
         type: nfs
