--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -6,6 +6,6 @@ namespace: storage
 components:
   - ../../components/common
 resources:
-  - ./minio/ks.yaml
+  # - ./minio/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
