--- a/docker/dns/config.yaml
+++ b/docker/dns/config.yaml
@@ -11,6 +11,8 @@ customDNS:
   mapping:
     pve.nasenov.dev: 192.168.0.10
     truenas.nasenov.dev: 192.168.0.15
+    s3.nasenov.dev: 192.168.0.15
+    minio.nasenov.dev: 192.168.0.15
     kromgo.nasenov.dev: 192.168.0.43
     nasenov.dev: 192.168.0.40
 blocking:
