--- a/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
+++ b/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
             image:
               repository: ghcr.io/cross-seed/cross-seed
               tag: 6.12.3@sha256:813f7fb8b739bf30c1b247f8adc2a8100775e4250eb33d0b46849c0130e0a7d6
-            args: ["daemon"]
+            args: ["daemon", "--verbose"]
             env:
               TZ: Europe/Sofia
             probes:
