chore(grafana): add reloader annotation

--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -21,6 +21,9 @@ spec:
     podDisruptionBudget:
       minAvailable: 1
 
+    annotations:
+      reloader.stakater.com/auto: "true"
+
     serviceMonitor:
       enabled: true
 
