chore(cross-seed): migrate deprecated config

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -34,7 +34,6 @@ spec:
             matchMode: "partial",
             maxDataDepth: 3,
             outputDir: null,
-            qbittorrentUrl: "http://{{ .QBITTORRENT_USERNAME }}:{{ .QBITTORRENT_PASSWORD }}@qbittorrent.default.svc.cluster.local",
             radarr: [
               "http://radarr.default.svc.cluster.local/?apikey={{ .RADARR_KEY }}"
             ],
@@ -42,6 +41,9 @@ spec:
             skipRecheck: true,
             sonarr: [
               "http://sonarr.default.svc.cluster.local/?apikey={{ .SONARR_KEY }}"
+            ],
+            torrentClients: [
+              "qbittorrent:http://{{ .QBITTORRENT_USERNAME }}:{{ .QBITTORRENT_PASSWORD }}@qbittorrent.default.svc.cluster.local"
             ],
             torznab: [
               4, // TorrentLeech
