fix(cross-seed): torznab config

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -46,9 +46,9 @@ spec:
               "qbittorrent:http://{{ .QBITTORRENT_USERNAME }}:{{ .QBITTORRENT_PASSWORD }}@qbittorrent.default.svc.cluster.local"
             ],
             torznab: [
-              4, // TorrentLeech
-              5  // HD-Torrents
-            ].map(i => `http://prowlarr.default.svc.cluster.local/${i}/api?apikey={{ .PROWLARR_KEY }}`),
+              "http://prowlarr.default.svc.cluster.local/4/api?apikey={{ .PROWLARR_KEY }}", // TL
+              "http://prowlarr.default.svc.cluster.local/5/api?apikey={{ .PROWLARR_KEY }}"  // HDT
+            ],
             useClientTorrents: true
           };
   data:
