feat(cilium): preserve client source IP

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -28,6 +28,9 @@ k8sServiceHost: localhost
 k8sServicePort: 7445
 l2announcements:
   enabled: true
+loadBalancer:
+  mode: dsr
+routingMode: native
 operator:
   prometheus:
     enabled: true
