--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -14,4 +14,5 @@ resources:
   - ./loki/ks.yaml
   - ./node-exporter/ks.yaml
   - ./prometheus-operator-crds/ks.yaml
+  - ./silence-operator/ks.yaml
   - ./smartctl-exporter/ks.yaml
